# stealth-security-program

./: .env.example  .gitignore  AGENT_TEAM_EXECUTION_GUIDE.md  CHANGELOG.md  LANDING_PAGE_SPEC.md  LAUNCH_PLAN.md  Makefile  README.md  agent_team_input_criteria.yaml  docker-compose.yml  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
api/proxy/: anthropic.py  health.py  openai.py  requirements.txt  scan.py
api/proxy/_lib/: __init__.py  auth.py  budget.py  cost.py  db.py  logger.py  redis.py  router.py  tokens.py
dashboard/: .env.local.example  DEPLOYMENT.md  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.setup.ts
dashboard/__tests__/landing/: CostCalculator.test.tsx  LandingPage.test.tsx
dashboard/app/: globals.css  layout.tsx  providers.tsx
dashboard/app/(marketing)/: layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/api-keys/: page.tsx
dashboard/app/budgets/: page.tsx
dashboard/app/clawshield/: page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: BudgetAlert.tsx  BudgetAlertManager.tsx  ModelSwitchIndicator.tsx
dashboard/hooks/: useBudgetMonitor.ts
dashboard/lib/: agent-tracker.ts  api-keys.ts  auth.tsx  budget-monitor.ts  demo-data.ts  email.ts  model-switcher.ts  supabase-browser.ts  supabase-server.ts  supabase.ts  useRealtimeLogs.ts  utils.ts
dashboard/scripts/: add-more-spend.mjs  add-test-logs.mjs  confirm-user.mjs  exceed-budget.mjs  sync-user.mjs
deploy/aws/: deploy-ecs.sh  ecs-task-definition.json
deploy/terraform/: main.tf
docker/: Dockerfile.scanner
docs/: SECURITY_ARCHITECTURE.md  THREAT_MODEL.md  agent-integration.md  architecture.md  threat-model.md
plans/: agentcostcontrol-execution-guide.md  findings.md  progress.md  task_plan.md
proxy/: Dockerfile  Dockerfile.production  README.md  agentcostcontrol.db  pyproject.toml
proxy/app/: config.py  main.py
proxy/app/api/: router.py
proxy/app/api/v1/: __init__.py  agents.py  analytics.py  auth.py  budgets.py  proxy.py  routing.py  scan.py
proxy/app/compliance/: __init__.py
proxy/app/core/: __init__.py  budget_engine.py  cost_calculator.py  pricing_data.py  proxy_handler.py  smart_router.py  stream_handler.py  streaming_interceptor.py  token_counter.py
proxy/app/middleware/: __init__.py  rate_limiter.py
proxy/app/models/: __init__.py  agent.py  alert.py  api_log.py  base.py  budget.py  database.py  pricing.py  routing_rule.py  scan.py  user.py
proxy/app/scanners/: __init__.py  patterns.py  scanner.py  trust_scorer.py
proxy/app/security/: __init__.py  async_framework.py  config.py  engine.py  honeypot.py  middleware.py  models.py  multitenant.py  rule_engine.py
proxy/app/security/detectors/: __init__.py  anomaly.py  base.py  credential.py  data_exfil.py  prompt_injection.py  runaway.py  semantic.py  tool_abuse.py
proxy/app/services/: __init__.py  progress_tracker.py  scan_orchestrator.py
proxy/app/threat_intel/: __init__.py  detector.py
proxy/app/workers/: __init__.py  queue.py  scanner_worker.py
proxy/tests/: test_analytics.py  test_auth.py  test_clawhub_api.py  test_compliance.py  test_honeypot.py  test_multitenant.py  test_pricing.py  test_proxy_security.py  test_security_engine.py  test_threat_intel.py
scripts/: deploy.sh  seed_pricing.py  setup_supabase.py  update_models.py
supabase/: seed.sql
supabase/migrations/: 000_run_all.sql  001_initial.sql  002_pricing.sql  003_agent_tasks.sql  003_clawshield.sql  003_clawshield_cleanup.sql  004_alerts.sql  005_payments.sql  006_fix_scan_credits_rls.sql
(+73 files in other folders)
